# DeepSeekMonitorWindows

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
